--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -1,17 +1,37 @@
 <div class="container">
+        <!--  <div *ngFor="let property of propertyListItemModels">-->
+        <!--    <div class="row">-->
+        <!--      <div class="col-auto">-->
+        <!--        <img (click)="details(property.id)" alt="Room" class="room-list-item__image" src="{{property.imageUrl}}"/>-->
+        <!--      </div>-->
+        <!--      <div class="col text-left">-->
+        <!--        <h3>{{property.name}}</h3>-->
+        <!--        <p><strong>Number of beds: </strong> {{property.numberOfRooms}}</p>-->
+        <!--        <p><strong>Price per night: </strong> {{property.price}}</p>-->
+        <!--      </div>-->
+        <!--    </div>-->
+        <!--  </div>-->
 
-  <div *ngFor="let property of propertyListItemModels">
-    <div class="row">
-      <div class="col-auto">
-        <img (click)="details(property.id)" alt="Room" class="room-list-item__image" src="{{property.imageUrl}}"/>
-      </div>
-      <div class="col text-left">
-        <h3>{{property.name}}</h3>
-        <p><strong>Number of beds: </strong> {{property.numberOfRooms}}</p>
-        <p><strong>Price per night: </strong> {{property.price}}</p>
-      </div>
-    </div>
-  </div>
-
-
+      <table id="list-table" class="table table-borderless">
+          <thead>
+              <tr>
+                  <th colspan="3"><h1>Eladó ingatlanok</h1></th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let property of propertyListItemModels">
+                  <td><img (click)="details(property.id)" alt="ingatlan" class="room-list-item__image" width="200"
+                           src="{{property.imageUrl}}"/></td>
+                  <td>
+                      <h3>{{property.name}}</h3>
+                      <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
+                      <p><strong>Ár: </strong> {{property.price}}</p></td>
+                  <td>
+                      <div class="btn-group">
+                          <button class="btn btn-primary" (click)="details(property.id)">Részletek</button>
+                      </div>
+                  </td>
+              </tr>
+          </tbody>
+      </table>
 </div>
