--- a/moovsmart/src/app/components/property-list/property-list.component.css
+++ b/moovsmart/src/app/components/property-list/property-list.component.css
@@ -16,3 +16,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.defaultPicture {
+    width: 100%;
+    max-width: 200px;
+    height: 100%;
+    max-height: 150px;
+}
