--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -14,8 +14,15 @@
           </thead>
           <tbody>
               <tr *ngFor="let property of propertyListItemModels">
-                  <td><img (click)="details(property.id)" alt="ingatlan" class="room-list-item__image" width="200"
-                           src="{{property.imageUrl}}"/></td>
+                  <td>
+                      <div *ngIf="!property.imageUrl">
+                          <img [src]="defaultPicture" class="defaultPicture">
+                      </div>
+                      <div *ngIf="property.imageUrl">
+                      <img (click)="details(property.id)" alt="ingatlan" class="room-list-item__image" width="200"
+                           src="{{property.imageUrl}}"/>
+                      </div>
+                  </td>
                   <td>
                       <h3>{{property.name}}</h3>
                       <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
