--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light navbar-expand-lg fixed-top">
+<nav class="navbar navbar-dark navbar-expand-lg fixed-top mynav">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Moovsmart</a>
     <button aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation"
