--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -29,7 +29,7 @@
                       <p><strong>Ár: </strong> {{property.price}}</p></td>
                   <td>
                       <div class="btn-group">
-                          <button class="btn btn-primary" (click)="details(property.id)">Részletek</button>
+                          <button class="btn" (click)="details(property.id)">Részletek</button>
                       </div>
                   </td>
               </tr>
