Translate navbar to Hungarian

--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -9,8 +9,8 @@
 
     <div class="navbar-collapse collapse" id="myNavbar">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item"><a class="nav-link" routerLink="/property-list">Property List</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/property-form">Create Property</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/property-list">Ingatlanok listája</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/property-form">Ingatlan regisztrálása</a></li>
       </ul>
     </div>
   </div>
