--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -1,31 +1,20 @@
 <div class="container">
-    <div class="row">
-        <div class="column">
-            <img *ngFor="let image of propertyImage, let i = index" src="{{image}}" alt="picture"
-                 style="width:100%" (click)="openModal();currentSlide(i)" class="hover-shadow cursor">
-        </div>
-
-        <div id="myModal" class="modal">
-            <span class="close cursor" (click)="closeModal()">&times;</span>
-            <div class="modal-content">
-
-                <div class="mySlides" *ngFor="let image of propertyImage">
-                    <div class="numbertext">1 / 4</div>
-                    <img src="{{image}}" style="width:100%" alt="picture">
-                </div>
-                <a class="prev" (click)="plusSlides(-1)">&#10094;</a>
-                <a class="next" (click)="plusSlides(1)">&#10095;</a>
-
-                <div class="caption-container">
-                    <p id="caption"></p>
-                </div>
-
-                <div class="column" *ngFor="let image of propertyImage ,let i = index">
-                    <img class="demo cursor" src="{{image}}" style="width:100%" (click)="currentSlide(i)" alt="picture">
-                </div>
-
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" >
+            <div class="carousel-item active" >
+                <img [src]="imagesBasic[0].img" class="d-block w-100" alt="picture">
+            </div>
+            <div class="carousel-item" *ngFor="let image of imagesBasic">
+                <img src="{{image.img}}" class="d-block w-100" alt="...">
             </div>
         </div>
-
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </div>
