--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner" >
-            <div class="carousel-item active" >
-                <img [src]="imagesBasic[0].img" class="d-block w-100" alt="picture">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img [src]="defaultPicture" class="d-block w-100" alt="picture">
             </div>
-            <div class="carousel-item" *ngFor="let image of imagesBasic">
-                <img src="{{image.img}}" class="d-block w-100" alt="...">
+            <div class="carousel-item" *ngFor="let image of images">
+                <img src="{{image}}" class="d-block w-100" alt="picture" id="main-img" (click)="changeDefaultImg(image)">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -16,5 +16,10 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+    <div id="img-holder-row">
+        <div *ngFor="let image of images" id="img-bonder">
+            <img [src]="image" class="small-img" alt="picture" (click)="changeDefaultImg(image)">
+        </div>
     </div>
 </div>
