--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -26,6 +26,10 @@
         placeholder="írja be a szobák számát!"
         type="number"
       />
+      <small *ngIf="propertyForm.get('numberOfRooms').invalid && propertyForm.get('numberOfRooms').touched
+      && !propertyForm.get('numberOfRooms').errors?.serverError">
+        A szobák száma csak nullánál nagyobb lehet!
+      </small>
       <small *ngIf="propertyForm.get('numberOfRooms').errors?.serverError" class="text-danger">
         {{propertyForm.get('numberOfRooms').errors['serverError']}}
       </small>
@@ -41,6 +45,10 @@
         placeholder="írja be az árat!"
         type="number"
       />
+      <small *ngIf="propertyForm.get('price').invalid && propertyForm.get('price').touched
+      && !propertyForm.get('price').errors?.serverError">
+        Kérjük, adjon az ingatlannak nullánál nagyobb kikiáltási árat!
+      </small>
       <small *ngIf="propertyForm.get('price').errors?.serverError" class="text-danger">
         {{propertyForm.get('price').errors['serverError']}}
       </small>
@@ -76,6 +84,6 @@
     </div>
 
     <br/>
-    <button class="btn btn-primary my-buttons">Mentés</button>
+    <button class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
   </form>
 </div>
