--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -44,3 +44,7 @@
     <p>{{propertyDetails?.description}}</p>
 
 </div>
+<div class="container" id="buttons">
+    <button class="btn" (click)="edit(propertyDetails.id)">Szerkesztés</button>
+    <button class="btn" (click)="delete(propertyDetails.id)">Törlés</button>
+</div>
