--- a/moovsmart/src/app/components/property-details/property-details.component.css
+++ b/moovsmart/src/app/components/property-details/property-details.component.css
@@ -26,4 +26,16 @@
     background-color: antiquewhite;
 }
 
+#map{
+    height: 400px;
+    width: 100%;
+}
+
+a{
+    color: darkblue;
+}
+a:hover{
+    color: magenta;
+}
+
 
