--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -43,4 +43,27 @@
     <p><strong>Részletes leírás:</strong></p>
     <p>{{propertyDetails?.description}}</p>
 
+    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">
+        <strong>Mutassa térképen</strong>
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div #mapContainer id="map"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
