--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item"><a class="nav-link" routerLink="/property-list">Ingatlanok listája</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="/property-form">Ingatlan regisztrálása</a></li>
       </ul>
+
+      <a class="nav-link" routerLink="/registration">Regisztráció</a>
+      <a class="nav-link" routerLink="/registration">Bejelentkezés</a>
     </div>
   </div>
 </nav>
