--- a/moovsmart/src/app/components/property-list/property-list.component.css
+++ b/moovsmart/src/app/components/property-list/property-list.component.css
@@ -29,7 +29,7 @@
     max-height: 150px;
 }
 
-.btn {
-    background-color: #7E685A;
-    color: white;
-}
+/*.btn {*/
+/*    background-color: #7E685A;*/
+/*    color: white;*/
+/*}*/
