--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -13,7 +13,7 @@
             />
             <small *ngIf="registrationForm.get('userName').invalid && registrationForm.get('userName').touched
        && !registrationForm.get('userName').errors?.serverError" class="text-danger">
-                A felhasználói név minimum 1, de maximum 20 karakter lehet.
+                A felhasználói név minimum 2, de maximum 20 karakter lehet.
             </small>
             <small *ngIf="registrationForm.get('userName').errors?.serverError" class="text-danger">
                 {{registrationForm.get('userName').errors['serverError']}}
@@ -23,11 +23,13 @@
         <div class="form-group">
             <label for="mail">Email</label>
             <input
+                type="email"
                 class="form-control"
                 formControlName="mail"
                 id="mail"
                 name="mail"
                 placeholder="Kérjük, adja meg az email-címét!"
+                required
             />
             <small *ngIf="registrationForm.get('mail').invalid && registrationForm.get('mail').touched
        && !registrationForm.get('mail').errors?.serverError" class="text-danger">
@@ -41,15 +43,17 @@
         <div class="form-group">
             <label for="password">Jelszó</label>
             <input
+                type="password"
                 class="form-control"
                 formControlName="password"
                 id="password"
                 name="password"
                 placeholder="Kérjük, adjon meg egy jelszót!"
+                required
             />
             <small *ngIf="registrationForm.get('password').invalid && registrationForm.get('password').touched
        && !registrationForm.get('password').errors?.serverError" class="text-danger">
-                A felhasználói név minimum 1, de maximum 20 karakter lehet.
+                A jelszó minimum 6 karakter legyen.
             </small>
             <small *ngIf="registrationForm.get('password').errors?.serverError" class="text-danger">
                 {{registrationForm.get('password').errors['serverError']}}
@@ -59,4 +63,23 @@
         <br/>
         <button class="btn btn-primary my-buttons" [disabled]="registrationForm.invalid">Mentés</button>
     </form>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Információ</h5>
+                <button type="button" class="close" data-dismiss="modal" (click)="closeModalDialog()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>A regisztrációt megerősítő email-t elküldtük a megadott email-címre.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModalDialog()">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
