--- a/moovsmart/src/app/components/registration/registration.component.css
+++ b/moovsmart/src/app/components/registration/registration.component.css
@@ -1,4 +1,11 @@
 .modal-header {
     background-color: #7E685A;
-    color: #C2B9B0;
+    color: white;
+}
+.btn {
+    background-color: #7E685A;
+    color: white;
+}
+.close {
+    color: white;
 }
