--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -69,7 +69,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Információ</h5>
+                <h5 class="modal-title">Értesítés</h5>
                 <button type="button" class="close" data-dismiss="modal" (click)="closeModalDialog()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
