registration registration, signin

--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -88,6 +88,8 @@
     </div>
 
     <br/>
-    <button class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
+    <div class="btn-group">
+      <button class="btn my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
+    </div>
   </form>
 </div>
