--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </ul>
 
       <a class="nav-link" routerLink="/registration">Regisztráció</a>
-      <a class="nav-link" routerLink="/registration">Bejelentkezés</a>
+      <a class="nav-link" routerLink="/signin">Bejelentkezés</a>
     </div>
   </div>
 </nav>
