welcome page frontend ready

--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container jumbotron">
     <h2>Regisztráció</h2>
     <hr/>
     <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm">
