--- a/moovsmart/src/app/components/welcome/welcome.component.html
+++ b/moovsmart/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,34 @@
 <div class="container jumbotron">
-    <h3>Isten hozta a MoovSmart ingatlan aukciós portálon!</h3>
+    <div id="main-img-holder">
+        <h3>Isten hozta a MoovSmart ingatlan aukciós portálon!</h3>
+        <div>
+                <img src="assets/img/lecsapva2.jpg" alt="picture" id="main-img">
+        </div>
+        <p>Válogasson és licitáljon a ingatlanaink között. A szerződésben lévő partnereinknek van lehetősége ingatlanok feltöltésére! </p>
+        <p><strong>A feltöltéshez, ingatlanokra történő licitlási lehetőséghez,
+            kérjük <a routerLink="/registration">jelentkezzen </a> be!</strong></p>
+        <hr>
+    </div>
+    <div id="link-holder">
+        <div id="left-img-holder">
+            <a routerLink="/property-list">
+            <img src="assets/img/link1.png" alt="picture" class="img-link-surfing"></a>
+            <p><a routerLink="/property-list"><strong>Böngészni szeretnék az oldalon</strong></a></p>
+        </div>
+
+        <div id="right-img-holder">
+            <a routerLink="/registration">
+                <img src="assets/img/registrating.jpg" alt="picture" class="img-link-surfing"></a>
+            <p><a routerLink="/registration"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
+        </div>
+
+        <div id="mid-img-holder">
+            <a routerLink="/registration">
+                <img src="assets/img/online_aukcio.jpg" alt="picture" class="img-link-surfing"></a>
+            <p><a routerLink="/registration"><strong>Ingatlanra akarok licitálni</strong></a></p>
+        </div>
+
+    </div>
+
 </div>
 
