--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container jumbotron">
   <h2>Új ingatlan regisztrálása</h2>
   <hr/>
   <form (ngSubmit)="submit()" [formGroup]="propertyForm">
