welcome page frontend ready, short refacting

--- a/moovsmart/src/app/components/welcome/welcome.component.html
+++ b/moovsmart/src/app/components/welcome/welcome.component.html
@@ -19,7 +19,7 @@
         <div id="right-img-holder">
             <a routerLink="/registration">
                 <img src="assets/img/registrating.jpg" alt="picture" class="img-link-surfing"></a>
-            <p><a routerLink="/registration"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
+            <p><a routerLink="/property-form"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
         </div>
 
         <div id="mid-img-holder">
