error message: already registered user

--- a/moovsmart/src/app/components/signin/signin.component.html
+++ b/moovsmart/src/app/components/signin/signin.component.html
@@ -30,7 +30,7 @@
                 formControlName="password"
                 id="password"
                 name="password"
-                placeholder="Kérjük, adjon meg egy jelszót!"
+                placeholder="Kérjük, adja meg egy jelszavát!"
                 required
             />
             <small *ngIf="signInForm.get('password').invalid && signInForm.get('password').touched
