--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -83,3 +83,22 @@
         </div>
     </div>
 </div>
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayError}">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Értesítés</h5>
+                <button type="button" class="close" data-dismiss="modal" (click)="closeModalDialogError()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>A regisztráció sikertelen. Ezzel az e-mail címmel már regisztráltak.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-dismiss="modal" (click)="closeModalDialogError()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
