--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -73,21 +73,22 @@
       </small>
     </div>
 
-    <div class="form-group">
-      <label
-        for="imageUrl">Kép</label>
-      <input
-        class="form-control"
-        formControlName="imageUrl"
-        id="imageUrl"
-        placeholder="írja be az ingatlanról készült kép URL-ét!"
-      />
-      <small *ngIf="propertyForm.get('imageUrl').errors?.serverError" class="text-danger">
-        {{propertyForm.get('imageUrl').errors['serverError']}}
-      </small>
-    </div>
-
-    <br/>
-    <button class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
-  </form>
+        <div class="form-group">
+            <label
+                for="imageUrl"></label>
+            <input
+                   style="display:none"
+                   class="form-control"
+                   accept="image/*"
+                   formControlName="imageUrl"
+                   id="imageUrl"
+                   type="file" (change)="processFile(imageInput)"
+                   #imageInput>
+            <button (click)="imageInput.click()">Kattintson ide kép feltöltéséhez!</button>
+            <small *ngIf="propertyForm.get('imageUrl').errors?.serverError" class="text-danger">
+                {{propertyForm.get('imageUrl').errors['serverError']}}
+            </small>
+        </div>
+        <button class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
+    </form>
 </div>
