--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -84,11 +84,11 @@
                    id="imageUrl"
                    type="file" (change)="processFile(imageInput)"
                    #imageInput>
-            <button (click)="imageInput.click()">Kattintson ide kép feltöltéséhez!</button>
+            <button type="button" (click)="imageInput.click()">Kattintson ide kép feltöltéséhez!</button>
             <small *ngIf="propertyForm.get('imageUrl').errors?.serverError" class="text-danger">
                 {{propertyForm.get('imageUrl').errors['serverError']}}
             </small>
         </div>
-        <button class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
+        <button type="submit" class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
     </form>
 </div>
