little design refact on Frontend (some icon added to navbar)

--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top mynav">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Moovsmart</a>
+    <a class="navbar-brand" routerLink="/"><i class="fas fa-home"></i>Moovsmart</a>
     <button aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation"
             class="navbar-toggler collapsed"
             data-target="#myNavbar" data-toggle="collapse" type="button">
@@ -13,8 +13,8 @@
         <li class="nav-item"><a class="nav-link" routerLink="/property-form">Ingatlan regisztrálása</a></li>
       </ul>
 
-      <a class="nav-link" routerLink="/registration">Regisztráció</a>
-      <a class="nav-link" routerLink="/signin">Bejelentkezés</a>
+      <a class="nav-link" routerLink="/registration">Regisztráció <i class="far fa-edit"></i></a>
+      <a class="nav-link" routerLink="/signin">Bejelentkezés <i class="fas fa-sign-in-alt"></i></a>
     </div>
   </div>
 </nav>
