--- a/moovsmart/src/app/components/property-details/property-details.component.css
+++ b/moovsmart/src/app/components/property-details/property-details.component.css
@@ -20,6 +20,7 @@
     max-width: 50%;
     margin-bottom: 2%;
     background-color: antiquewhite;
+    padding-bottom: 3px;
 }
 
 #text-container{
@@ -38,3 +39,6 @@ a:hover{
     color: magenta;
 }
 
+#bottom-div{
+    margin-bottom: 3%;
+}
